Create sidebar and navbar, implement projects state

--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
+    "firebase": "^9.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "rxjs": "^7.8.0",
-    "styled-components": "^5.3.9"
+    "sass": "^1.60.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
